--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "gulp": "^4.0.2",
     "gulp-beautify": "^3.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^5.0.0",
+    "gulp-serve": "^1.4.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "gulp-using": "^0.1.1",
+    "handlebars": "^4.7.7",
     "minimist": "^1.2.0",
     "require-dir": "^1.2.0",
+    "sass": "^1.40.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
-  },
-  "dependencies": {}
+  }
 }
